--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "quillion-cli"
 version = "0.1.2"
 description = "Quillion Command Line Interface"
 authors = ["anybody"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
