--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["anybody"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<4.0"
 typer = "^0.19.1"
 rich = "^14.1.0"
 pyfiglet = "^1.0.4"
