--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "quillion-cli"
-version = "0.1.2"
+version = "0.1.3"
 description = "Quillion Command Line Interface"
 authors = ["anybody"]
 readme = "README.md"
@@ -13,6 +13,7 @@ pyfiglet = "^1.0.4"
 watchdog = "^2.3.1"
 jinja2 = "^3.1.2"
 tomli = "^2.0.1"
+requests = "2.32.5"
 
 [build-system]
 requires = ["poetry-core"]
